--- a/index.html
+++ b/index.html
@@ -3,48 +3,25 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Orb: web</title>
-    <style>
-      body {
-        font-family: sans-serif;
-        background: white;
-        font-size: 1.2rem;
-      }
-      details {
-        display: inline-block;
-        vertical-align: top;
-        min-width: 8em;
-        width: 40%;
-        margin-top: 1em;
-      }
-      details:last-child { width: auto; }
-      ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-      }
-      @media (min-width: 40rem) {
-        body { font-size: .7rem; }
-        details { margin-top: 40vh; }
-      }
-    </style>
+    <script src="scripts.js"></script>
   </head>
   <body>
-    <details>
-      <summary>Orb</summary>
-      weaving web design
-    </details>
-    <details>
-      <summary>Sites</summary>
+    <header>
+      <h1>Orb-web</h1>
+    </header>
+    <nav class="menuBar keepOpen">
       <ul>
-        <li><a href="https://loom.sprig.site" target="_blank">Mmitl</a></li>
-        <li><a href="https://clairebergey.net" target="_blank">Claire Bergey</a></li>
-        <li><a href="https://raifwexler.net">Raif Wexler</a></li>
+        <li>Meet me in the loom</li>
+        <li>Claire Bergey</li>
+        <li>Raif Wexler</li>
+        <li>Black Cat Judaica</li>
+        <li>Marshfield School of Weaving</li>
       </ul>
-    </details>
-    <details>
-      <summary>Contact</summary>
-      <a href="mailto:mail@sprig.site">mail@sprig.site</a>
-    </details>
+    </nav>
+    <main>
+      <p>Orb-web is webs designed by weavers</p>
+    </main>
   </body>
 </html>
