--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <script src="scripts.js"></script>
   </head>
   <body>
-    <header>
+    <header class="colorSync">
       <h1>Orb-web</h1>
     </header>
-    <nav class="menuBar keepOpen">
-      <ul>
-        <li>Meet me in the loom</li>
-        <li>Claire Bergey</li>
-        <li>Raif Wexler</li>
-        <li>Black Cat Judaica</li>
-        <li>Marshfield School of Weaving</li>
+    <nav class="menuBar">
+      <ul class="colorSync">
+        <li><a href="#mmitl" dataColor="aliceblue">Meet me in the loom</a></li>
+        <li><a href="#claire" dataColor="green">Claire Bergey</a></li>
+        <li><a href="#bcj" dataColor="purple">Black Cat Judaica</a></li>
+        <li><a href="#raif" dataColor="silver">onRead</a></li>
+        <li><a href="#raif" dataColor="maroon">Raif Wexler</a></li>
+        <li><a href="#msw" dataColor="orange">Marshfield School of Weaving</a></li>
       </ul>
     </nav>
     <main>
