--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Orb: web</title>
-    <script src="scripts.js"></script>
-  </head>
-  <body>
-    <header class="colorSync">
-      <h1>Orb-web</h1>
-    </header>
-      <nav class="menuBar">
-        <ul class="colorSync">
-          <li><a href="#mmitl" dataColor="aliceblue">Meet me in the loom</a></li>
-          <li><a href="#claire" dataColor="green">Claire Bergey</a></li>
-          <li><a href="#bcj" dataColor="purple">Black Cat Judaica</a></li>
-          <li><a href="#raif" dataColor="silver">onRead</a></li>
-          <li><a href="#raif" dataColor="maroon">Raif Wexler</a></li>
-          <li><a href="#msw" dataColor="orange">Marshfield School of Weaving</a></li>
-        </ul>
-      </nav>
-
-    <main>
-      <p>Orb-web is webs designed by weavers</p>
-    </main>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>Orb: web</title>
+  <script src="scripts.js"></script>
+</head>
+<body>
+  <header class="colorSync">
+    <h1>Orb-web</h1>
+  </header>
+  <nav class="menuBar">
+    <ul class="colorSync">
+      <li><a href="#mmitl" dataColor="aliceblue">Meet me in the loom</a></li>
+      <li><a href="#claire" dataColor="green">Claire Bergey</a></li>
+      <li><a href="#bcj" dataColor="purple">Black Cat Judaica</a></li>
+      <li><a href="#raif" dataColor="silver">onRead</a></li>
+      <li><a href="#raif" dataColor="maroon">Raif Wexler</a></li>
+      <li><a href="#msw" dataColor="orange">Marshfield School of Weaving</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section>
+      <p>Orb-web is webs woven by weavers</p>
+      <p>End-to-end design services, with you every step of the way</p>
+      <p>Accessible, snappy, gorgeous on every device</p>
+      <p>Exceptional, unique, clear</p>
+    </section>
+  </main>
+</body>
 </html>
