--- a/canvas.html
+++ b/canvas.html
@@ -6,7 +6,7 @@
 	<title></title>
 	<style type="text/css">
 		body { margin: 0 }
-		canvas { outline: 1q solid black }
+		canvas { outline: 1q solid black; cursor: crosshair; }
 	</style>
 </head>
 <body onload="draw();">
@@ -15,6 +15,7 @@
 	<script>
 		function draw() {
 			const canvas = document.querySelector('#canvas')
+			const ctx = canvas.getContext('2d')
 
 			function setCanvas(width) {
 				const apWidth = Math.floor(width / 10) * 10
@@ -25,13 +26,13 @@
 
 			function drawFrame(width) {
 				if (canvas.getContext) {
-				const ctx = canvas.getContext('2d')
+				
 
-				ctx.strokeRect(10, 10, width - 20, 80)
+				ctx.strokeRect(20, 20, width - 40, 80)
 				ctx.fillText(`Width: ${width}`, 10, 120)
 				let i = 0
 				while (i < 10) {
-					ctx.fillRect(i*20 + 10, 10 + 20 * (i % 4), 20, 20)
+					ctx.fillRect(i*20 + 20, 20 + 20 * (i % 4), 20, 20)
 					i += 1
 				}
 				}
@@ -40,6 +41,20 @@
 			let prevWidth = window.innerWidth
 			drawFrame(setCanvas(prevWidth))
 			
+			canvas.addEventListener('mousedown', e => {
+				function drawEvent(event) { 
+					const x = Math.floor((event.x) / 20) * 20
+					const y = Math.floor((event.y) / 20) * 20
+					if (event.button === 0) ctx.fillRect(x, y, 20, 20)
+					if (event.button === 2) {event.preventDefault(); ctx.clearRect(x, y, 20, 20)}
+				}
+				
+				drawEvent(e)
+				canvas.addEventListener('mousemove', drawEvent)
+				canvas.addEventListener('mouseup', () => canvas.removeEventListener('mousemove', drawEvent))
+				canvas.addEventListener('mouseleave', () => canvas.removeEventListener('mousemove', drawEvent))
+			})
+
 			window.addEventListener('resize', () => {
 				const width = window.innerWidth
 				if (Math.abs(prevWidth - width) >= 10) {
